--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/cli": "^9.3.2",
     "@react-native-google-signin/google-signin": "^8.2.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^6.5.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.13",
@@ -26,6 +27,7 @@
     "events": "^3.3.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-barcode-mask": "^1.2.4",
     "react-native-bluetooth-escpos-printer": "^0.0.5",
     "react-native-camera": "^4.2.1",
@@ -61,6 +63,7 @@
     "eslint": "^7.32.0",
     "jest": "^29.3.1",
     "metro-react-native-babel-preset": "0.72.3",
+    "patch-package": "^8.0.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0"
   },
